--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <h2>My <span>Projects</span></h2>
                     <div class="serv-container">
                         <div class="row">
-                            <img src="./img/FMD.png">
+                            <img src="stress.png">
                             <div class="layer">
                                 <h5>Stress Level Detection</h5>
                                 <p>Detection of Stress;whether a patient has stress or not pandas are used for data analysis and naive bayes algorithm for binary classification.</p
@@ -180,7 +180,7 @@
                         </div>
 
                         <div class="row">
-                            <img src="./img/DD.png">
+                            <img src="petfinder.png">
                             <div class="layer">
                                 <h5>Pet Finder Using Bootstrap</h5>
                                 <p>This project aims to enhance the user interface of the Petfinder website using the Bootstrap framework..</p>
@@ -191,7 +191,7 @@
                         </div>
 
                         <div class="row">
-                            <img src="./img/DA.png">
+                            <img src="">
                             <div class="layer">
                                 <h5>Auto Billing Mall Shopping Cart</h5>
                                 <p>An innovative project which will be placed in the shopping trolley itself. The system consist of of a RFID reader which is controlled by 8051 microcontroller.L.</p>
