--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         </div>
 
                         <div class="row">
-                            <img src="">
+                            <img src="WhatsApp Image 2024-09-24 at 16.38.54.jpeg">
                             <div class="layer">
                                 <h5>Auto Billing Mall Shopping Cart</h5>
                                 <p>An innovative project which will be placed in the shopping trolley itself. The system consist of of a RFID reader which is controlled by 8051 microcontroller.L.</p>
