--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="shortcut icon" type="image/png" href="ic.png">
         <link rel="stylesheet" href='./files/style.css'>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+        <script src="curly hair.webp"></script>
         
     </head>
     <body>
